# realitycheck_smart-contract

./: .algokit.toml  README.md  pyproject.toml
.algokit/: .copier-answers.yml
smart_contracts/realitycheck/: contract.py  deploy_config.py
tests/: test_realitycheck.py
